Added static field to Region schema
